--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-    <title>碳账户 - 首页</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="碳中和校园平台，查看全站减排数据，兑换环保好物。">
+    <title>首页 - 碳中和校园</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
@@ -66,30 +68,8 @@
         </div>
     </div>
     
-    <!-- 导航栏 -->
-    <nav>
-        <a href="index.html" class="nav-item active" data-page="index.html">
-            <span class="nav-icon">🏠</span>
-            <span>首页</span>
-        </a>
-        <a href="shop.html" class="nav-item" data-page="shop.html">
-            <span class="nav-icon">🛒</span>
-            <span>商城</span>
-        </a>
-        <a href="recycle.html" class="nav-item" data-page="recycle.html">
-            <span class="nav-icon">♻️</span>
-            <span>回收</span>
-        </a>
-        <a href="rank.html" class="nav-item" data-page="rank.html">
-            <span class="nav-icon">🏆</span>
-            <span>排行</span>
-        </a>
-        <a href="profile.html" class="nav-item" data-page="profile.html">
-            <span class="nav-icon">👤</span>
-            <span>我的</span>
-        </a>
-    </nav>
-    
-    <script src="script.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/footer.js"></script>
 </body>
 </html>
