--- a/index.html
+++ b/index.html
@@ -27,22 +27,35 @@
             </div>
         </div>
         
-        <!-- 数据卡片 -->
-        <div class="stats-container">
-            <div class="stat-card" onclick="alert('数据详情开发中')">
-                <div class="stat-value">12,458</div>
-                <div class="stat-label">全站累计回收物品</div>
-                <div class="stat-change positive">↑ 8%</div>
+        <!-- 轮播广告区域 -->
+        <div class="carousel-container">
+            <div class="carousel-wrapper" id="carouselWrapper">
+                <div class="carousel-slide">
+                    <div class="stat-card">
+                        <div class="stat-value">12,458</div>
+                        <div class="stat-label">全站累计回收物品</div>
+                        <div class="stat-growth">↑ 18%</div>
+                    </div>
+                </div>
+                <div class="carousel-slide">
+                    <div class="stat-card">
+                        <div class="stat-value">¥45,280</div>
+                        <div class="stat-label">全站累计节省开支</div>
+                        <div class="stat-growth">↑ 16%</div>
+                    </div>
+                </div>
+                <div class="carousel-slide">
+                    <div class="stat-card">
+                        <div class="stat-value">2,580 kg</div>
+                        <div class="stat-label">全站累计减排量</div>
+                        <div class="stat-growth">↑ 10%</div>
+                    </div>
+                </div>
             </div>
-            <div class="stat-card" onclick="alert('数据详情开发中')">
-                <div class="stat-value">¥45,280</div>
-                <div class="stat-label">全站累计节省开支</div>
-                <div class="stat-change positive">↑ 6%</div>
-            </div>
-            <div class="stat-card" onclick="alert('数据详情开发中')">
-                <div class="stat-value">2,580</div>
-                <div class="stat-label">全站累计减排量</div>
-                <div class="stat-change positive">↑ 10%</div>
+            <div class="carousel-dots" id="carouselDots">
+                <span class="dot active"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
             </div>
         </div>
         
