--- a/rank.html
+++ b/rank.html
@@ -7,6 +7,8 @@
     <title>减碳排行榜 - 碳中和校园</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="supabaseClient.js"></script>
 </head>
 <body>
     <div class="container">
